# llama_8b_moe

./: .gitignore  DIARY.md  README.md  REQUIREMENTS.md  llama_moe.ipynb  main.py  pyproject.toml  requirements.txt
src/core/models/dense/: llama_dense_loader.py  llama_dense_model.py
src/core/models/moe/: llama_moe_loader.py  llama_moe_model.py
src/core/training/: __init__.py  data.py  distributed.py  fsdp.py  trainer.py
src/core/utils/: constants.py  device.py  generate.py  sanity_check_test.py
src/experiments/: llama_dense_sanity_check.py
src/experiments/conversion/: convert_dense_to_experts_by_sliciing.py  convert_dense_to_experts_by_svd.py
src/experiments/moe/conversion/: convert_dense_to_experts_by_sliciing.py  convert_dense_to_shared_expert.py
src/experiments/moe/tests/: dense_logit_match.py
src/experiments/tests/: dense_logit_match.py  dense_sanity_check.py
src/experiments/training/: moe_expert_continuous_pretraining.py
src/tests/: dense_sanity_check.py  moe_logit_match.py  moe_sanity_check.py
