[project]
name = "llama_8b_moe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "safetensors>=0.7.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/core"
]

[tool.pyrefly]
project-includes = [
    "src/**/*.py*",
    "src/**/*.ipynb",
]
